--- a/locales/en.strings
+++ b/locales/en.strings
@@ -1524,6 +1524,8 @@
 
 "admin_gift_moved_successfully" = "Gift moved successfully";
 "admin_gift_moved_to_recycle" = "This gift will now be in <b>Recycle Bin</b>.";
+"admin_original_file" = "Original file";
+"admin_audio_length" = "Length";
 
 "logs" = "Logs";
 "logs_anything" = "Anything";
