--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -788,6 +788,8 @@
 "broadcast_audio" = "Транслировать аудио в статус";
 "sure_delete_playlist" = "Вы действительно хотите удалить этот плейлист?";
 "edit_audio" = "Редактировать аудиозапись";
+"audios_group" = "Аудиозаписи группы";
+"playlists_group" = "Плейлисты группы";
 
 /* Notifications */
 
@@ -1645,16 +1647,15 @@
 
 
 "tour_section_6_title_1" = "Слушайте аудиозаписи";
-"tour_section_6_text_1" = "Вы можете слушать аудиозаписи в разделе \"Мои Аудиозаписи\".";
-"tour_section_6_text_2" = "Этот раздел также регулируется настройками приватности.";
+"tour_section_6_text_1" = "Вы можете слушать аудиозаписи в разделе \"Мои Аудиозаписи\"";
+"tour_section_6_text_2" = "Этот раздел также регулируется настройками приватности";
 "tour_section_6_text_3" = "Самые прослушиваемые песни находятся во вкладке \"Популярное\", а недавно загруженные — во вкладке \"Новое\"";
-"tour_section_6_text_4" = "Найти нужную песню можно в поиске.";
-"tour_section_6_text_5" = "Чтобы добавить песню в свою коллекцию, наведите на неё и нажмите на плюс.";
-"tour_section_6_text_6" = "Если вы не можете найти нужную песню, вы можете загрузить её самостоятельно.";
+"tour_section_6_text_4" = "Чтобы добавить песню в свою коллекцию, наведите на неё и нажмите на плюс. Найти нужную песню можно в поиске";
+"tour_section_6_text_5" = "Если вы не можете найти нужную песню, вы можете загрузить её самостоятельно";
 "tour_section_6_bottom_text_1" = "<b>Важно:</b> песня не должна нарушать авторские права";
-"tour_section_6_title_1" = "Создавайте плейлисты";
-"tour_section_6_text_7" = "Вы можете создавать сборники треков во вкладке \"Мои плейлисты\".";
-"tour_section_6_text_8" = "Можно также добавлять чужие плейлисты в свою коллекцию.";
+"tour_section_6_title_2" = "Создавайте плейлисты";
+"tour_section_6_text_6" = "Вы можете создавать сборники треков во вкладке \"Мои плейлисты\"";
+"tour_section_6_text_7" = "Можно также добавлять чужие плейлисты в свою коллекцию";
 
 
 "tour_section_7_title_1" = "Следите за тем, что пишут ваши друзья";
