--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -702,7 +702,7 @@
 
 "audio_embed_not_found" = "Аудиозапись не найдена";
 "audio_embed_deleted" = "Аудиозапись была удалена";
-"audio_embed_withdrawn" = "Аудиозапись была изъята по обращению правообладателя";
+"audio_embed_withdrawn" = "Аудиозапись была изъята по обращению правообладателя.";
 "audio_embed_forbidden" = "Настройки приватности пользователя не позволяют встраивать эту композицию";
 "audio_embed_processing" = "Аудио ещё обрабатывается, либо обработалось неправильно.";
 
