--- a/locales/en.strings
+++ b/locales/en.strings
@@ -72,7 +72,7 @@
 "change_status" = "change status";
 "name" = "Name";
 "surname" = "Surname";
-"gender" = "Gender";
+"gender" = "Sex";
 "male" = "male";
 "female" = "female";
 "description" = "Description";
@@ -1457,7 +1457,7 @@
 "admin_verification" = "Verification";
 "admin_banreason" = "Ban reason";
 "admin_banned" = "banned";
-"admin_gender" = "Gender";
+"admin_gender" = "Sex";
 "admin_registrationdate" = "Registration date";
 "admin_actions" = "Actions";
 "admin_image" = "Image";
