--- a/locales/uk.strings
+++ b/locales/uk.strings
@@ -461,7 +461,7 @@
 "my_friends" = "Мої Друзі";
 "my_photos" = "Мої Фотографії";
 "my_videos" = "Мої Відеозаписи";
-"audios" = "Мої Аудіозаписи"
+"audios" = "Мої Аудіозаписи";
 "my_messages" = "Мої Повідомлення";
 "my_notes" = "Мої Нотатки";
 "my_groups" = "Мої Групи";
